force-app/main/default/objects/Opportunity/fields/AA_Unit_Projection__c.field-meta.xml
<CustomField>
    <fullName>AA_Unit_Projection__c</fullName>
    <defaultValue>0</defaultValue>
    <description>AA Unit Projection</description>
    <label>AA Unit Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>