force-app/main/default/objects/Opportunity/fields/Accept_56_Day_Rule_Violation__c.field-meta.xml
<CustomField>
    <fullName>Accept_56_Day_Rule_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if a user has elected to create an opportunity even though it violates the 56 days rule</description>
    <label>Accept 56 Day Rule Violation</label>
    <type>Checkbox</type>
</CustomField>