force-app/main/default/objects/Opportunity/fields/AcceptblankMilitaryAuthNamePhone__c.field-meta.xml
<CustomField>
    <fullName>AcceptblankMilitaryAuthNamePhone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is uncheked, fire validation rule Stage_Validation_Commited_Closed</description>
    <label>Accept Blank Military Auth Name/Phone</label>
    <type>Checkbox</type>
</CustomField>