force-app/main/default/objects/Opportunity/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Manager of the related Account</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blood_Drive_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>