force-app/main/default/objects/Opportunity/fields/Account_Manager_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager Portfolio</label>
    <referenceTo>BSF_Portfolio__c</referenceTo>
    <relationshipLabel>Blood Drive Opportunities</relationshipLabel>
    <relationshipName>Blood_Drive_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>