force-app/main/default/objects/Opportunity/fields/actual_drbc_units_collected__c.field-meta.xml
<CustomField>
    <fullName>actual_drbc_units_collected__c</fullName>
    <formula>Related_Scheduled_Drive__r.sked_actual_drbc_units_collected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2RBC Products Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>