force-app/main/default/objects/Opportunity/fields/actual_visit_donor_cnt__c.field-meta.xml
<CustomField>
    <fullName>actual_visit_donor_cnt__c</fullName>
    <formula>Related_Scheduled_Drive__r.sked_actual_visit_donor_cnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presenting Donors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>