force-app/main/default/objects/Opportunity/fields/Anticipated_Registered_Donors__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Registered_Donors__c</fullName>
    <description>Numeric value that reflects the # of donors expected to be at the drive. Current based on historical drive data (like drive, how many people).</description>
    <label>Anticipated Registered Donors</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>