force-app/main/default/objects/Opportunity/fields/Anticipated_Registered_Donors_Template__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Registered_Donors_Template__c</fullName>
    <label>Anticipated Registered Donors Template</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>