force-app/main/default/objects/Opportunity/fields/AnticipatedRegisterDonorChangeReason__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedRegisterDonorChangeReason__c</fullName>
    <inlineHelpText>Anticipated Registered - Donors Change Reason</inlineHelpText>
    <label>Anticipated Reg. Donor Cng Rsn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>