force-app/main/default/objects/Opportunity/fields/APT_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>APT_Change_Reason__c</fullName>
    <description>Created as part of HRP-13190</description>
    <label>APT Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>