force-app/main/default/objects/Opportunity/fields/APT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>APT_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created as part of HRP-13190</description>
    <label>APT Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>