force-app/main/default/objects/Opportunity/fields/APT_Required__c.field-meta.xml
<CustomField>
    <fullName>APT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of HRP-13190</description>
    <label>APT Required</label>
    <type>Checkbox</type>
</CustomField>