force-app/main/default/objects/Opportunity/fields/ARC_Region__c.field-meta.xml
<CustomField>
    <fullName>ARC_Region__c</fullName>
    <formula>Collections_Zip_Code__r.Collection_Operation__r.sked_Territory__r.sked_Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARC Region</label>
    <type>Text</type>
</CustomField>