force-app/main/default/objects/Opportunity/fields/Automation_Suitability__c.field-meta.xml
<CustomField>
    <fullName>Automation_Suitability__c</fullName>
    <description>Inherits value from Site</description>
    <formula>TEXT(Drive_Site__r.sked_Automation_Suitability__c)</formula>
    <label>Automation Suitability</label>
    <type>Text</type>
</CustomField>