force-app/main/default/objects/Opportunity/fields/Average_Employees_At_Each_Location__c.field-meta.xml
<CustomField>
    <fullName>Average_Employees_At_Each_Location__c</fullName>
    <inlineHelpText>Average Employees At Each Location</inlineHelpText>
    <label>Average Employees At Each Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>