force-app/main/default/objects/Opportunity/fields/Average_Per_Drive_planned_goal__c.field-meta.xml
<CustomField>
    <fullName>Average_Per_Drive_planned_goal__c</fullName>
    <inlineHelpText>How many donors do you estimate per drive?</inlineHelpText>
    <label>Average Per Drive (planned goal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>