force-app/main/default/objects/Opportunity/fields/Booking_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Booking_Strategy__c</fullName>
    <description>This field is created as part of HRP-11368</description>
    <label>Booking Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>