force-app/main/default/objects/Opportunity/fields/Calendar_Build_Alert_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Build_Alert_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether calendar build alert is reviewed</description>
    <label>Calendar Build Alert Reviewed</label>
    <type>Checkbox</type>
</CustomField>