force-app/main/default/objects/Opportunity/fields/Calendar_Build_Generated_For__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Build_Generated_For__c</fullName>
    <description>This field is used to indicate if the opportunity has a calendar build drive generated for it.</description>
    <label>Calendar Build Generated For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>