force-app/main/default/objects/Opportunity/fields/Calendar_Build_Reasons_For_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Build_Reasons_For_Unqualified__c</fullName>
    <description>Reasons why the drive was marked as unqualified</description>
    <label>Calendar Build Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>