force-app/main/default/objects/Opportunity/fields/Calendar_Build_Status__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Build_Status__c</fullName>
    <description>Field used to indicate whether a drives meets the following:  &#39;Rollover&#39; and &#39;Is Drive Successful&#39; criteria.</description>
    <label>Calendar Build Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>