force-app/main/default/objects/Opportunity/fields/Calendar_Description__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Description__c</fullName>
    <label>Calendar Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Summer Holidays</fullName>
            </value>
            <value>
                <fullName>Independence Day</fullName>
            </value>
            <value>
                <fullName>Eves</fullName>
            </value>
            <value>
                <fullName>Nov Hol</fullName>
            </value>
            <value>
                <fullName>Dec Hol</fullName>
            </value>
            <value>
                <fullName>Jan Hol</fullName>
            </value>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Special Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>