force-app/main/default/objects/Opportunity/fields/Call_List_Recipient_Exist__c.field-meta.xml
<CustomField>
    <fullName>Call_List_Recipient_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Drive contact of role &#39;Call List Recipient&#39; exist on the account</inlineHelpText>
    <label>Call List Recipient Exist ?</label>
    <type>Checkbox</type>
</CustomField>