force-app/main/default/objects/Opportunity/fields/Cancellation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Detail__c</fullName>
    <description>Created as part of HRP-11431</description>
    <label>Cancellation Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>