force-app/main/default/objects/Opportunity/fields/CDA_AB_Positive__c.field-meta.xml
<CustomField>
    <fullName>CDA_AB_Positive__c</fullName>
    <label>CDA AB Positive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>