force-app/main/default/objects/Opportunity/fields/CDA_Deferrals__c.field-meta.xml
<CustomField>
    <fullName>CDA_Deferrals__c</fullName>
    <label>CDA Deferrals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>