force-app/main/default/objects/Opportunity/fields/CDA_Male__c.field-meta.xml
<CustomField>
    <fullName>CDA_Male__c</fullName>
    <label>CDA Male</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>