force-app/main/default/objects/Opportunity/fields/CDA_QNS__c.field-meta.xml
<CustomField>
    <fullName>CDA_QNS__c</fullName>
    <description>Quantity Not Sufficient</description>
    <inlineHelpText>Quantity Not Sufficient</inlineHelpText>
    <label>CDA QNS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>