force-app/main/default/objects/Opportunity/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City field from Site Object</description>
    <formula>Drive_Site__r.sked_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>