force-app/main/default/objects/Opportunity/fields/Collections_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Collections_Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Zip Code</label>
    <referenceTo>Collections_Territory__c</referenceTo>
    <relationshipLabel>Drive Opportunities</relationshipLabel>
    <relationshipName>Drive_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>