force-app/main/default/objects/Opportunity/fields/Date_Of_Last_Contact_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Contact_Activity__c</fullName>
    <inlineHelpText>When was the last time you contacted the customer?</inlineHelpText>
    <label>Date Of Last Contact/Activity</label>
    <type>Date</type>
</CustomField>