force-app/main/default/objects/Opportunity/fields/Date_Site_Inspection_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Date_Site_Inspection_Completed_by__c</fullName>
    <description>Inherited from Site</description>
    <formula>Drive_Site__r.sked_Site_Inspection_Completed_By__r.FirstName + &quot; &quot; + Drive_Site__r.sked_Site_Inspection_Completed_By__r.LastName</formula>
    <label>Date Site Verification Completed by</label>
    <type>Text</type>
</CustomField>