force-app/main/default/objects/Opportunity/fields/Days_of_Week_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Week_Preferred__c</fullName>
    <formula>SUBSTITUTE(

    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Monday&quot;),  &quot;Monday  &quot;,  NULL) +
    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Tuesday&quot;),  &quot;Tuesday   &quot;,  NULL) +
    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Wednesday&quot;),  &quot;Wednesday   &quot;,  NULL) +
    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Thursday&quot;),  &quot;Thursday  &quot;,  NULL) +
    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Friday&quot;),  &quot;Friday  &quot;,  NULL) +
    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Saturday&quot;),  &quot;Saturday  &quot;,  NULL) +
    IF(INCLUDES( Account.Days_of_Week_Preferred__c , &quot;Sunday&quot;),  &quot;Sunday  &quot;,  NULL),
   

    &quot;;.&quot;,

    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days of Week Preferred</label>
    <type>Text</type>
</CustomField>