force-app/main/default/objects/Opportunity/fields/Double_Red_Procedures_Projected_Original__c.field-meta.xml
<CustomField>
    <fullName>Double_Red_Procedures_Projected_Original__c</fullName>
    <label>Double Red Procedures Projected Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>