force-app/main/default/objects/Opportunity/fields/Double_Red_Projected_Units__c.field-meta.xml
<CustomField>
    <fullName>Double_Red_Projected_Units__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Double Red Projected Units</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>