force-app/main/default/objects/Opportunity/fields/Draw_Rate__c.field-meta.xml
<CustomField>
    <fullName>Draw_Rate__c</fullName>
    <description>Field has been added as part of HRP-12011</description>
    <formula>Anticipated_Registered_Donors_Template__c - Parent_Template_Id__r.CDA_QNS__c - Parent_Template_Id__r.CDA_Deferrals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draw Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>