force-app/main/default/objects/Opportunity/fields/DRD_Territory__c.field-meta.xml
<CustomField>
    <fullName>DRD_Territory__c</fullName>
    <formula>Collections_Zip_Code__r.DRD_Territory2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DRD Territory</label>
    <type>Text</type>
</CustomField>