force-app/main/default/objects/Opportunity/fields/Drive_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Completed_Date__c</fullName>
    <description>The date when the drive is completed.</description>
    <label>Drive Completed Date</label>
    <type>DateTime</type>
</CustomField>