force-app/main/default/objects/Opportunity/fields/Drive_Date_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date_Change_Reason__c</fullName>
    <label>Drive Date Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>