force-app/main/default/objects/Opportunity/fields/Drive_Date_Less_Than_85_Days__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date_Less_Than_85_Days__c</fullName>
    <formula>(5 * (FLOOR( (Drive_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(Drive_Date__c - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(TODAY() - DATE( 1900, 1, 8), 7 ) ) ) &lt; 85 &amp;&amp;
CloseDate =  Date(1900, 01,01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Date Less Than 85 Days</label>
    <type>Checkbox</type>
</CustomField>