force-app/main/default/objects/Opportunity/fields/Drive_Designations__c.field-meta.xml
<CustomField>
    <fullName>Drive_Designations__c</fullName>
    <description>Filed to capture the value for Drive Designation</description>
    <label>Drive Designations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donors without Drive Bookings</fullName>
            </value>
            <value>
                <fullName>Gray Skies</fullName>
            </value>
            <value>
                <fullName>COVID 19</fullName>
            </value>
            <value>
                <fullName>Brixmor Property Group</fullName>
            </value>
            <value>
                <fullName>Critical Booking Timeframe</fullName>
            </value>
            <value>
                <fullName>DAA Prior</fullName>
            </value>
            <value>
                <fullName>Diversity - African American Potential</fullName>
            </value>
            <value>
                <fullName>Diversity - African American Prior</fullName>
            </value>
            <value>
                <fullName>Diversity - Latino Potential</fullName>
            </value>
            <value>
                <fullName>Diversity - Latino Prior</fullName>
            </value>
            <value>
                <fullName>Diversity - Pride/LGBTQIA+</fullName>
            </value>
            <value>
                <fullName>Fixed Site Growth Boost</fullName>
            </value>
            <value>
                <fullName>Friends Promo</fullName>
            </value>
            <value>
                <fullName>HealthPartners</fullName>
            </value>
            <value>
                <fullName>HS Lead Referral</fullName>
            </value>
            <value>
                <fullName>LateAddSupport</fullName>
            </value>
            <value>
                <fullName>NMDP (formerly BeTheMatch)</fullName>
            </value>
            <value>
                <fullName>Referral-Disaster</fullName>
            </value>
            <value>
                <fullName>Referral-Hospital Sales</fullName>
            </value>
            <value>
                <fullName>Referral-National Partnerships</fullName>
            </value>
            <value>
                <fullName>Referral-SAF</fullName>
            </value>
            <value>
                <fullName>Unique Constraint Test</fullName>
            </value>
            <value>
                <fullName>Unique Constraint Test1</fullName>
            </value>
            <value>
                <fullName>Weather Delay/Early Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>