force-app/main/default/objects/Opportunity/fields/Drive_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Drive_Keyword__c</fullName>
    <description>Field auto-populates with the Sponsor_Keyword__c value from the Account but is editable. Follows same validation rule requirements.</description>
    <inlineHelpText>Keywords are used to search for drives on RCB.org. Maximum 50 characters, not required to be unique; not case sensitive; excludes numbers; &#39;and&#39;, &#39;or&#39;, &#39;left&#39;, &#39;right&#39; as standalone words; special characters.</inlineHelpText>
    <label>Drive Keyword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>