force-app/main/default/objects/Opportunity/fields/Drive_Logistics_Other__c.field-meta.xml
<CustomField>
    <fullName>Drive_Logistics_Other__c</fullName>
    <label>Drive Logistics Other</label>
    <type>TextArea</type>
</CustomField>