force-app/main/default/objects/Opportunity/fields/Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>Drive_Name__c</fullName>
    <label>Blood Drive Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>