force-app/main/default/objects/Opportunity/fields/Drive_Site_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Site_Operation_Type__c</fullName>
    <formula>TEXT(Drive_Site__r.Operation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Site Operation Type</label>
    <type>Text</type>
</CustomField>