force-app/main/default/objects/Opportunity/fields/Drive_Status__c.field-meta.xml
<CustomField>
    <fullName>Drive_Status__c</fullName>
    <description>This field reflects the value from Drive Status on Drives on Calendar as is.When the opportunity is created, this field should be left blank and should be updated once Drive is created .</description>
    <label>Drive Status(Do not use)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>System Generated</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Pending Action</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Withdrawn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>