force-app/main/default/objects/Opportunity/fields/DS_Division__c.field-meta.xml
<CustomField>
    <fullName>DS_Division__c</fullName>
    <formula>Collections_Zip_Code__r.Donor_Services_Division__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Division</label>
    <type>Text</type>
</CustomField>