force-app/main/default/objects/Opportunity/fields/DS_Region__c.field-meta.xml
<CustomField>
    <fullName>DS_Region__c</fullName>
    <formula>Collections_Zip_Code__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Region</label>
    <type>Text</type>
</CustomField>