force-app/main/default/objects/Opportunity/fields/Enable_APH_Web_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Enable_APH_Web_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>APH appointments are visible online to donors (APH Enable Web Scheduling) based on Enable Web Scheduling</description>
    <label>Enable APH Web Scheduling</label>
    <type>Checkbox</type>
</CustomField>