force-app/main/default/objects/Opportunity/fields/Exclude_from_sponsor_direct_marketing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_sponsor_direct_marketing__c</fullName>
    <formula>Account.Exclude_from_sponsor_direct_marketing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from sponsor direct marketing</label>
    <type>Checkbox</type>
</CustomField>