force-app/main/default/objects/Opportunity/fields/Flow_End_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Flow_End_Time_Field__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0000</fullName>
                <label>12:00 AM</label>
            </value>
            <value>
                <fullName>0015</fullName>
                <label>12:15 AM</label>
            </value>
            <value>
                <fullName>0030</fullName>
                <label>12:30 AM</label>
            </value>
            <value>
                <fullName>0045</fullName>
                <label>12:45 AM</label>
            </value>
            <value>
                <fullName>0100</fullName>
                <label>1:00 AM</label>
            </value>
            <value>
                <fullName>0115</fullName>
                <label>1:15 AM</label>
            </value>
            <value>
                <fullName>0130</fullName>
                <label>1:30 AM</label>
            </value>
            <value>
                <fullName>0145</fullName>
                <label>1:45 AM</label>
            </value>
            <value>
                <fullName>0200</fullName>
                <label>2:00 AM</label>
            </value>
            <value>
                <fullName>0215</fullName>
                <label>2:15 AM</label>
            </value>
            <value>
                <fullName>0230</fullName>
                <label>2:30 AM</label>
            </value>
            <value>
                <fullName>0245</fullName>
                <label>2:45 AM</label>
            </value>
            <value>
                <fullName>0300</fullName>
                <label>3:00 AM</label>
            </value>
            <value>
                <fullName>0315</fullName>
                <label>3:15 AM</label>
            </value>
            <value>
                <fullName>0330</fullName>
                <label>3:30 AM</label>
            </value>
            <value>
                <fullName>0345</fullName>
                <label>3:45 AM</label>
            </value>
            <value>
                <fullName>0400</fullName>
                <label>4:00 AM</label>
            </value>
            <value>
                <fullName>0415</fullName>
                <label>4:15 AM</label>
            </value>
            <value>
                <fullName>0430</fullName>
                <label>4:30 AM</label>
            </value>
            <value>
                <fullName>0445</fullName>
                <label>4:45 AM</label>
            </value>
            <value>
                <fullName>0500</fullName>
                <label>5:00 AM</label>
            </value>
            <value>
                <fullName>0515</fullName>
                <label>5:15 AM</label>
            </value>
            <value>
                <fullName>0530</fullName>
                <label>5:30 AM</label>
            </value>
            <value>
                <fullName>0545</fullName>
                <label>5:45 AM</label>
            </value>
            <value>
                <fullName>0600</fullName>
                <label>6:00 AM</label>
            </value>
            <value>
                <fullName>0615</fullName>
                <label>6:15 AM</label>
            </value>
            <value>
                <fullName>0630</fullName>
                <label>6:30 AM</label>
            </value>
            <value>
                <fullName>0645</fullName>
                <label>6:45 AM</label>
            </value>
            <value>
                <fullName>0700</fullName>
                <label>7:00 AM</label>
            </value>
            <value>
                <fullName>0715</fullName>
                <label>7:15 AM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>