force-app/main/default/objects/Opportunity/fields/Flow_End_Time_Label_Text__c.field-meta.xml
<CustomField>
    <fullName>Flow_End_Time_Label_Text__c</fullName>
    <defaultValue>&quot;12:00 AM&quot;</defaultValue>
    <description>Flow End Time Label Text</description>
    <label>Flow End Time Label Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>